fix: 🐛 Fix a bug where "{" inside comments would break the library

--- a/tests/comments-with-curly-braces-breaks-selectors.scoped.css
+++ b/tests/comments-with-curly-braces-breaks-selectors.scoped.css
@@ -6,6 +6,6 @@ p {
 /* =============== EXPECTED OUTPUT =============== */
 
 /* } */
-p[data-k-jnn75bcq] {
+p[data-k-52rfs2t5] {
   color: red;
 }
